fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,6 @@ body,
   height: 100%;
   width: 100%;
   font-family: "DM Sans", sans-serif;
+  overflow-x: hidden;
   @apply text-gray-500;
 }
